# autom_param_optimization

./: README.md
mbot_autom_param_tuning/mbot_autom_param_tuning/: CMakeLists.txt  package.xml
mbot_autom_param_tuning/mbot_autom_param_tuning_msgs/: CMakeLists.txt  package.xml
mbot_autom_param_tuning/mbot_autom_param_tuning_msgs/action/: RunAlgorithmInstance.action
mbot_autom_param_tuning/mbot_autom_param_tuning_tools/: CMakeLists.txt  package.xml  setup.py
mbot_autom_param_tuning/mbot_autom_param_tuning_tools/common/doc/: ruby_command_and_weblinks.txt
mbot_autom_param_tuning/mbot_autom_param_tuning_tools/common/src/mbot_autom_param_tuning_tools/: cpu_statistics.py
mbot_autom_param_tuning/mbot_autom_param_tuning_tools/common/tuning_software/smac-v2.10.03/: run_smac.sh
mbot_autom_param_tuning/mbot_autom_param_tuning_tools/common/tuning_software/smac-v2.10.03/example_scenarios/branin/: branin.py
mbot_autom_param_tuning/mbot_autom_param_tuning_tools/ros/config/: algorithm_instance_coordinator_rqt_config.yaml
mbot_autom_param_tuning/mbot_autom_param_tuning_tools/ros/include/mbot_autom_param_tuning_tools/: clock_pub.h
mbot_autom_param_tuning/mbot_autom_param_tuning_tools/ros/launch/: algorithm_instance_coordinator_rqt.launch  launch_file_launcher_example.launch
mbot_autom_param_tuning/mbot_autom_param_tuning_tools/ros/scripts/: cpu_time_reader_node  launch_file_launcher_node  node_launcher_node  run_algorithm_instance_server_node  smac_wrapper_node
mbot_autom_param_tuning/mbot_autom_param_tuning_tools/ros/src/: clock_pub.cpp
mbot_autom_param_tuning/mbot_autom_param_tuning_tools/ros/src/mbot_autom_param_tuning_tools_ros/: cpu_time_reader.py  launch_file_launcher.py  node_launcher.py  run_algorithm_instance_server.py  smac_wrapper.py
mbot_autom_param_tuning/mbot_autom_tuning_examples/mbot_autom_tuning_amcl/: CMakeLists.txt  package.xml  setup.py
mbot_autom_param_tuning/mbot_autom_tuning_examples/mbot_autom_tuning_amcl/common/config/: amcl-scenario.txt  amcl_smac_params.pcs
mbot_autom_param_tuning/mbot_autom_tuning_examples/mbot_autom_tuning_amcl/common/scripts/: smac
mbot_autom_param_tuning/mbot_autom_tuning_examples/mbot_autom_tuning_amcl/ros/config/: default_amcl_params.yaml  mbot_amcl_params.yaml  mbot_amcl_ranges.pcs
mbot_autom_param_tuning/mbot_autom_tuning_examples/mbot_autom_tuning_amcl/ros/doc/: README.md
mbot_autom_param_tuning/mbot_autom_tuning_examples/mbot_autom_tuning_amcl/ros/experimental_data/bags/: README.md  amcl_run_bag.launch  fix_rosbag_tf_timestamps.py
mbot_autom_param_tuning/mbot_autom_tuning_examples/mbot_autom_tuning_amcl/ros/launch/: amcl_autom_param_tuning.launch  amcl_consistency_check_experiment.launch  amcl_dependencies.launch  amcl_instance_server.launch  amcl_launcher.launch  amcl_score_function.launch  amcl_smac.launch
mbot_autom_param_tuning/mbot_autom_tuning_examples/mbot_autom_tuning_amcl/ros/scripts/: amcl_consistency_check_node  run_amcl_instance_client_node
mbot_autom_param_tuning/mbot_autom_tuning_examples/mbot_autom_tuning_amcl/ros/src/mbot_autom_tuning_amcl_ros/: amcl_consistency_check.py  run_amcl_instance_client.py
mbot_autom_param_tuning/mbot_autom_tuning_examples/mbot_autom_tuning_amcl/ros/test/: example_data_to_test_box_plot.csv
mbot_autom_param_tuning/mbot_autom_tuning_examples/mbot_autom_tuning_examples/: CMakeLists.txt  package.xml
mbot_autom_param_tuning/mbot_score_functions/mbot_map_evaluator/: CMakeLists.txt  package.xml
mbot_autom_param_tuning/mbot_score_functions/mbot_map_evaluator/common/include/mbot_map_evaluator/: fitness_score.h
mbot_autom_param_tuning/mbot_score_functions/mbot_map_evaluator/common/src/: fitness_score.cpp
mbot_autom_param_tuning/mbot_score_functions/mbot_map_evaluator/ros/data/: README.md  gt_map_points.pcd
mbot_autom_param_tuning/mbot_score_functions/mbot_map_evaluator/ros/include/mbot_map_evaluator/: iterative_closest_point_eval.h  occupancy_grid_to_pointcloud.h
mbot_autom_param_tuning/mbot_score_functions/mbot_map_evaluator/ros/launch/: publish_ground_truth_points.launch
mbot_autom_param_tuning/mbot_score_functions/mbot_map_evaluator/ros/scripts/: algorithm_launcher_node  automatic_tuning_coordinator_node  coordinator_trigger_node  node_launcher_node
mbot_autom_param_tuning/mbot_score_functions/mbot_map_evaluator/ros/src/: iterative_closest_point_eval.cpp  occupancy_grid_to_pointcloud.cpp
mbot_autom_param_tuning/mbot_score_functions/mbot_map_evaluator/ros/test/development_map/: eval_map.pgm  eval_map.yaml  publish_development_map.launch
mbot_autom_param_tuning/mbot_score_functions/mbot_map_evaluator/ros/test/evaluation_maps/analysis/: results_comparison_map_dataset_w_graphs.ods
mbot_autom_param_tuning/mbot_score_functions/mbot_pose_evaluator/: CMakeLists.txt  package.xml  setup.py
mbot_autom_param_tuning/mbot_score_functions/mbot_pose_evaluator/ros/doc/: README.md  pose_error_calc.dia
mbot_autom_param_tuning/mbot_score_functions/mbot_pose_evaluator/ros/include/mbot_pose_evaluator/: event_in_based_sm.h  mean_pose_error_accumulator.h  tf_error_calculator.h
mbot_autom_param_tuning/mbot_score_functions/mbot_pose_evaluator/ros/launch/: cartesian_error_accumulator.launch  pose_evaluator.launch  pose_evaluator_test.launch
mbot_autom_param_tuning/mbot_score_functions/mbot_pose_evaluator/ros/scripts/: component_wise_pose_error_calculator_node  publish_pose_estimate
mbot_autom_param_tuning/mbot_score_functions/mbot_pose_evaluator/ros/src/: event_in_based_sm.cpp  mean_pose_error_accumulator.cpp  tf_error_calculator.cpp
mbot_autom_param_tuning/mbot_score_functions/mbot_pose_evaluator/ros/src/mbot_pose_evaluator_ros/: component_wise_pose_error_calculator.py
mbot_autom_param_tuning/mbot_score_functions/mbot_score_functions/: CMakeLists.txt  package.xml
mbot_republishers/: CMakeLists.txt  package.xml
mbot_republishers/ros/include/mbot_republishers/: pose_with_covariance_republisher.h
mbot_republishers/ros/launch/: amcl_pose_republisher.launch
mbot_republishers/ros/src/: pose_with_covariance_republisher.cpp
ros1_scripts/: amcl_log.py  (+4 more)
(+77 files in other folders)
