<?xml version="1.0"?>
<package>
  <name>mbot_autom_param_tuning</name>
  <version>0.0.1</version>
  <description>
      Automatically tune parameters for ROS based algorithms metapackage.
  </description>
  <license>GPLv3</license>

  <author email="olima@isr.tecnico.ulisboa.pt">Oscar Lima</author>

  <maintainer email="olima@isr.tecnico.ulisboa.pt">Oscar Lima</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
