<?xml version="1.0"?>
<package>
  <name>mbot_autom_param_tuning_tools</name>
  <version>0.0.1</version>
  <description>
      Common tools to coordinate the automatic parameter tuning of ROS based algorithms for robotics.
      i.e. Launch or kill an algorithm from code, state machine to perform a particular algorithm run, etc.
  </description>

  <maintainer email="olima@isr.tecnico.ulisboa.pt">Oscar Lima</maintainer>

  <license>GPLv3</license>

  <author email="olima@isr.tecnico.ulisboa.pt">Oscar Lima</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>rosgraph_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rosgraph_msgs</run_depend>

</package>
