<?xml version="1.0"?>
<package>
  <name>mbot_autom_tuning_examples</name>
  <version>0.0.1</version>
  <description>
      Examples of ROS algoritms which have been automatically tuned with the mbot_autom_param_tuning ROS pkg, metapackage.
      Currently AMCL and gmapping are available, only ? being stable. (This package is in experimental version)
  </description>
  <license>GPLv3</license>

  <author email="olima@isr.tecnico.ulisboa.pt">Oscar Lima</author>

  <maintainer email="olima@isr.tecnico.ulisboa.pt">Oscar Lima</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
