<?xml version="1.0"?>
<package>
  <name>mbot_pose_evaluator</name>
  <version>0.0.1</version>
  <description>
    Compare two 3D poses (geometry_msgs/PoseStamped) given in the same reference
    frame over time and output the average error between them.
  </description>

  <maintainer email="olima@isr.tecnico.ulisboa.pt">Oscar Lima</maintainer>

  <license>GPLv3</license>

  <author email="olima@isr.tecnico.ulisboa.pt">Oscar Lima</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mcr_manipulation_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>mcr_manipulation_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>
